...
            "state": "translated",
            "value": "Albumname"
          }
        }
      }
    },
    "Albums": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Alben"
          }
...
            "state": "translated",
            "value": "Neues Album"
          }
        }
      }
    },
    "No Albums Yet": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Keine Alben"
          }
...
            "state": "translated",
            "value": "Fotobibliothekszugriff erforderlich"
          }
        }
      }
    },
    "Photos": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Fotos"
          }
...
            "state": "translated",
            "value": "Überspringen"
          }
        }
      }
    },
    "Sort": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Sortieren"
          }
        }
      }
    },
    "Light Table": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Leuchttisch"
          }
...
